Intermittent test failures in functional-tests due to timeouts
We are again seeing test failures in CI with this error:
trackertestutils.helpers.AwaitTimeoutException: Timeout awaiting insert of resource matching: a nfo:Document; nie:isStoredAs <file:///home/tracker/tracker-tests/tmpvx56xegn/test-monitored/miner-fts-test.txt>; nie:plainTextContent "automobile"
This was in test fts-basic
(log), but I think it happens in other tests too.